Bug 76109 - LO is getting crash for 'Fields' file
Summary: LO is getting crash for 'Fields' file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-13 09:40 UTC by Dinesh
Modified: 2014-03-18 17:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
LO crashes while opening docx file because of field issue (15.42 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-13 09:40 UTC, Dinesh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-03-13 09:40:43 UTC
Created attachment 95704 [details]
LO crashes while opening docx file because of field issue

LO is getting crash while opening docx file on MAC OS X and also on Linux machine. Issue is in CloseFieldCommand function which throws an exception.

Steps to reproduce:
Open the file in LibreOffice

Expected:
File should open without any crash.

Actual:
LO crashes while opening the file.
Comment 1 retired 2014-03-13 10:47:03 UTC
Confirmed:10.9:4.3.0.0a0+

Version: 4.3.0.0.alpha0+
Build ID: 1b6e87fc232e78790d45a54b7a4ac7fe02d2c587
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-03-08_23:04:18

NEW
Comment 2 Jean-Baptiste Faure 2014-03-16 12:07:09 UTC
Crash for me too under Linux / Ubuntu 13.10 x86-64
Build ID: 364ac5acf491ce4654ff9ca85fc416343b55b685
So removed MacOS from summary.

No crash with dev. version 4.2.4.0.0+

Best regards. JBF
Comment 3 Commit Notification 2014-03-17 15:52:17 UTC
Dinesh Patil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4c1cdd43de6e45726054fffb4b8c80ef9269f24a

fdo#76109: LO Crashes while opening the docx file containing three fields



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jorendc 2014-03-18 17:02:53 UTC
Looks like this one is fixed. I can not reproduce this crasher anymore, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 87efec9cc27b18aa09e50c289b503ba1127eb0b8
TinderBox: Win-x86@39, Branch:master, Time: 2014-03-18_02:50:50

Thanks!