fdo#76109: LO Crashes while opening the docx file containing three fields

- DOCX file containing fields BIBLIOGRAPHY on first line, BIDIOUTLINE on
  second line and CITATION on third line is getting crashed while opening in LO
- Fixed this issue and added unit test case for the same.

Change-Id: Ia8394a3a26157f88693edcf60b0161947d8a9ac0
Reviewed-on: https://gerrit.libreoffice.org/8589
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>